# opencv

./: .clang-format  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .project  .tgitconfig  .travis.yml  0001-Disable-threads-in-openjpeg-from-the-toolchain-file.patch  20240909.patch  20240910.patch  BUGFIX_PERSPECTIVE_TRANSFORM.md  CE assignment  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakeVars.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.cmake  CTestTestfile.cmake  Dockerfile  Doxyfile  FaceRecognition.ipynb  Features.md  FileToIgnore  GAPI_CUSTOM_STREAM_DESIGN.md  Group 27 Project Proposal.docx  HDR  HIP_INTEGRATION_SUMMARY.txt  ISSUE_27535_SOLUTION.md  ISSUE_TEMPLATE.md  Just for learning  LICENSE  MODIFY.md  Makefile  (+83 more)
3d/tracker3D/: CMakeLists.txt  makefile  object_tracker.cpp  object_tracker.h  readme.txt  tracker3D.cpp  tracker3D.h  tracker_calibration.cpp  tracker_calibration.h
_cmake_export_fix_test/: CMakeLists.txt  main.cpp
android/: Android.mk.in  Android.mk.master.in  AndroidCVModule.cmake  AndroidManifest.xml.in  Application.mk.in  CMakeCache.android.initial.cmake  CMakeLists.txt  Makefile  README.android  README.android.txt  android-opencv.mk.in  android.toolchain.cmake  android.wiki  changes.Android.txt  changes.diff  clean.sh  cmake_android.sh  cmake_android_armeabi.sh  cmake_android_neon.sh  cvconfig.h.in  diff.txt  includes.mk  java.rst  libs.mk  readme.txt  refman.rst
android/android-cmake/: CMakeLists.txt
android/android-jni/: AndroidManifest.xml  Makefile  README.txt  sample.env.mk  sample.local.env.mk
android/android-opencv/: AndroidManifest.xml  AndroidOpenCVConfig.cmake.in  CMakeLists.txt  README.txt  cmake_android.cmd  cmake_android.sh  cmake_android_neon.sh  default.properties  project_create.sh
android/libinfo/: CMakeLists.txt  info.c
android/opencv/: Android.mk  AndroidManifest.xml  Application.mk  cvconfig.h  default.properties
android/package/: AndroidManifest.xml  CMakeLists.txt
android/scripts/: ABI_compat_generator.py  build.cmd  camera_build.conf  cmake_android.cmd  cmake_android.sh  cmake_android_all_cameras.py  cmake_android_armeabi.cmd  cmake_android_armeabi.sh  cmake_android_mips.sh  cmake_android_neon.cmd  cmake_android_neon.sh  cmake_android_service.sh  cmake_android_x86.sh  package.sh  wincfg.cmd.tmpl
android/service/: CMakeLists.txt  ReadMe.txt  all.py  device.conf  push_native.py  readme.txt  test_native.py
android/zlib-android/: CMakeLists.txt  crc32.c  deflate.h  gzio.c  trees.c  uncompr.c
apps/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  python_app_test.py
apps/annotation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_annotation.cpp
apps/chromatic-aberration-calibration/: ca_calibration.py  chromatic_calibration.py
apps/createsamples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  createsamples.cpp  utility.cpp  utility.hpp
apps/haartraining/: CMakeLists.txt  _cvcommon.h  _cvhaartraining.h  createsamples.cpp  cvboost.cpp  cvclassifier.h  cvcommon.cpp  cvhaarclassifier.cpp  cvhaartraining.cpp  cvhaartraining.h  cvsamples.cpp  cvsamplesoutput.cpp  cvsamplesoutput.h  haartraining.cpp  ioutput.h  performance.cpp
apps/interactive-calibration/: CMakeLists.txt  CTestTestfile.cmake  Makefile  calibCenter.hpp  calibCommon.hpp  calibController.cpp  calibController.hpp  calibPipeline.cpp  calibPipeline.hpp  check  cmake_install.cmake  cvCalibrationFork.cpp  cvCalibrationFork.hpp  defaultConfig.xml  frameProcessor.cpp  frameProcessor.hpp  linalg.cpp  linalg.hpp  main.cpp  parametersController.cpp  parametersController.hpp  rotationConverters.cpp  rotationConverters.hpp
apps/pattern-tools/: README.txt  (+4 more)
cgi/: CMakeLists.txt  face.c
ctest/: CMakeLists.txt  CTestCustom.cmake  README.md  ctest_ext.cmake  opencv_test.cmake  opencv_test_internal.cmake  template.build.cmake
data/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  readme.txt
doc/: .gitignore  CMakeLists.modern.txt  CMakeLists.txt  CTestTestfile.cmake  ChangeLog.htm  CvAux.tex  Doxyfile  Doxyfile.in  DoxygenLayout.xml  FAQ.tex  FastFilterFlow.md  HighGui.tex  HighGui_Qt.tex  LICENSE_CHANGE_NOTICE.txt  Makefile  README.txt  STEPS.md  api_reference.md  buttonsqt.rst  calib3d.tex  check_docs.py  check_docs2.py  check_docs_whitelist.txt  cmake_install.cmake  common.m4  conf.py  core_array_operations.tex  core_basic_structures.tex  core_clustering_search.tex  core_drawing_functions.tex  core_introduction.tex  core_persistence.tex  core_utilities_system_functions.tex  custom.css  cv_calibration_3d.tex  cv_feature_detection.tex  cv_histograms.tex  cv_image_filtering.tex  cv_image_transform.tex  cv_image_warping.tex  (+87 more)
docroot/: CMakeLists.txt
docs_sphinx/: CMakeLists.txt  conf.py  requirements.txt
gpu_demos_pack/: CMakeLists.txt  LICENSE.txt  README.txt
interfaces/: CMakeLists.txt
learning_opencv_v2/: CMakeLists.txt  License.txt  ReadMe_run_programs.txt  ch10_ex10_1.cpp  ch10_ex10_1b_Farneback.cpp  ch10_ex10_2.cpp  ch10_motempl.cpp  ch11_chessboards.txt  ch11_ex11_1.cpp  ch11_ex11_1_fromdisk.cpp  ch12_ex12_1.cpp  ch12_ex12_2.cpp  ch12_ex12_3.cpp  ch12_ex12_4.cpp  ch12_list.txt  ch13_ex13_1.cpp  ch13_ex13_2.cpp  ch13_ex13_3.cpp  ch13_ex13_4.cpp  ch2_ex2_1.cpp  ch2_ex2_10.cpp  ch2_ex2_2.cpp  ch2_ex2_3.cpp  ch2_ex2_4.cpp  ch2_ex2_5.cpp  ch2_ex2_6.cpp  ch2_ex2_7.cpp  ch2_ex2_8.cpp  ch2_ex2_9.cpp  ch3_ex3_1.txt  ch3_ex3_10.txt  ch3_ex3_11.cpp  ch3_ex3_12.cpp  ch3_ex3_13.cpp  ch3_ex3_14.cpp  ch3_ex3_15.cpp  ch3_ex3_16.txt  ch3_ex3_17.cpp  ch3_ex3_18.xml  ch3_ex3_19.cpp  (+38 more)
main/: CMakeLists.txt  main.cpp  plan.md
modules/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  index.rst  refman.rst  refman.rst.in
samples/: CMakeLists.example.in  CMakeLists.txt  _winpack_build_sample.cmd  _winpack_run_python_sample.cmd  samples_utils.cmake
test/: CMakeLists.txt  detect_backend.cpp  test.cpp  test_libcamera.cpp  test_libcamera2.cpp  test_libcamera_plugin.cpp
(+22710 files in other folders)
